--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ apscheduler
 cairosvg
 cloudscraper
 colour
-covid
 cowpy
 dataclasses
 DateTime
@@ -16,11 +15,11 @@ glitch_this
 google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
-googletrans==4.0.0-rc1
 gtts
 hachoir
 heroku3
 html-telegraph-poster
+httpx[http2]
 humanize
 IMDbPY
 jikanpy
@@ -28,13 +27,14 @@ justwatch
 lottie
 lyricsgenius
 markdown
+markdown-it-py
 motor
 moviepy
+opencv-python-headless
 Pillow
 prettytable
 psutil
 psycopg2
-PyDictionary
 pyfiglet
 PyGithub
 pygments
@@ -57,18 +57,15 @@ spamwatch
 sqlalchemy-json
 sqlalchemy==1.3.23
 telegraph
-Telethon==1.24.0
-TgCrypto
-tswift
+tgcrypto
 ujson
 urlextract
 validators
 vcsi
 wand
 wget
+
+git+https://github.com/sandy1709/Telethon@beta
 git+https://github.com/goldsmith/Wikipedia
-hentai
-natsort
-python-ffmpeg
-pytube
-spotipy
+git+https://github.com/sandy1709/py-googletrans
+git+https://github.com/alexmercerind/youtube-search-python
